--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,13 @@ futures = "0.3.31"
 bcrypt = "0.15"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
+lru = "0.12"
+flate2 = "1.0"
+lazy_static = "1.4"
 
 [lib]
 name = "grux"
 path = "src/lib.rs"
+
+[dev-dependencies]
+tempfile = "3.8"
