--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 flate2 = "1.0"
 lazy_static = "1.4"
+tls-listener = { version = "0.11", features = ["rustls-core", "rustls-ring", "rt", "tokio-net"] }
+rcgen = { version = "0.14", features = ["ring", "pem"] }
+rustls-pki-types = "1.12"
 
 [lib]
 name = "grux"
