--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   grux:
     build:
@@ -41,6 +39,8 @@ services:
     image: php:8.2-fpm-alpine
     volumes:
       - ./www-default:/var/www/html:ro  # Web content accessible to PHP-FPM
+    ports:
+      - "9000:9000"
     restart: unless-stopped
     networks:
       - grux-network
