--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ tls-listener = { version = "0.11", features = ["rustls-core", "rustls-ring", "rt
 rcgen = { version = "0.14", features = ["ring", "pem"] }
 rustls-pki-types = "1.12"
 rand = "0.9.2"
+clap = { version = "4.5.48", features = ["derive"] }
 
 [lib]
 name = "grux"
