--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ rcgen = { version = "0.14", features = ["ring", "pem"] }
 rustls-pki-types = "1.12"
 rand = "0.9.2"
 clap = { version = "4.5.48", features = ["derive"] }
+cached = "0.56.0"
+num_cpus = "1.17.0"
 
 [lib]
 name = "grux"
