--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ clap = { version = "4.5.48", features = ["derive"] }
 cached = "0.56.0"
 num_cpus = "1.17.0"
 rustls-pemfile = "2.2.0"
+random_password_generator = "0.1.0"
 
 [lib]
 name = "grux"
