--- a/www-admin-src/package.json
+++ b/www-admin-src/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "debug": "vite --mode development",
+    "debug-build": "vite build --mode development"
   },
   "dependencies": {
     "vue": "^3.5.18"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.0"
+    "vite": "^7.1.12",
+    "vite-plugin-vue-devtools": "^8.0.3"
   }
 }
