--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 hyper = { version = "1", features = ["server", "http1", "http2"] }
-tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "time", "sync", "macros", "process"] }
+tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "time", "sync", "macros", "process", "signal"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["tokio", "server"] }
 log4rs = "1.3.0"
@@ -30,6 +30,7 @@ num_cpus = "1.17.0"
 rustls-pemfile = "2.2.0"
 random_password_generator = "0.1.0"
 wildcard = "0.3.0"
+tokio-util = "0.7.17"
 
 [lib]
 name = "grux"
