--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,8 @@ hyper = { version = "1", features = ["server", "http1", "http2"] }
 tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "time", "sync", "macros", "process", "signal"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["tokio", "server"] }
-log4rs = "1.3.0"
-log = "0.4.27"
 sqlite = "0.37.0"
-serde = "1.0.219"
+serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.141"
 mime_guess = "2.0.5"
 futures = "0.3.31"
