--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,6 @@ path = "src/lib.rs"
 hyper = { version = "1", features = ["server", "http1", "http2", "client"] }
 hyper-util = { version = "0.1", features = ["tokio", "server", "client"] }
 
-[[bench]]
-name = "syslog_benchmark"
-harness = false
+#[[bench]]
+#name = "syslog_benchmark"
+#harness = false
