Add support for HTTP2 and TLS upstream handling. So we can now do HTTP1 and HTTP2 both on client side and upstream, with pooled connections and TLS validation (possible to disable TLS validation). Much nice.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,10 @@ wildcard = "0.3.0"
 tokio-util = "0.7.17"
 rustls-pki-types = "1.13.1"
 http = "1.4.0"
+hyper-rustls = { version = "0.27.7", features = ["http1", "http2", "native-tokio", "tls12", "logging"] }
+rustls = "0.23.35"
+rustls-native-certs = "0.8.3"
+webpki-roots = "1.0.4"
 
 [lib]
 name = "grux"
