--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         npm install
         npm run build
 
-    - name: Build Grux (Release)
+    - name: Build Gruxi (Release)
       run: cargo build --release
 
     - name: Extract version from Cargo.toml
@@ -51,30 +51,30 @@ jobs:
     - name: Prepare Release Directory
       shell: bash
       run: |
-        mkdir -p release/grux
-        mkdir -p release/grux/db
-        mkdir -p release/grux/logs
-        mkdir -p release/grux/certs
-        cp target/release/grux${{ matrix.binary_ext }} release/grux/
-        cp -r www-admin release/grux/
-        cp -r www-default release/grux/
-        cp README.md release/grux/
-        cp LICENSE release/grux/
+        mkdir -p release/gruxi
+        mkdir -p release/gruxi/db
+        mkdir -p release/gruxi/logs
+        mkdir -p release/gruxi/certs
+        cp target/release/gruxi${{ matrix.binary_ext }} release/gruxi/
+        cp -r www-admin release/gruxi/
+        cp -r www-default release/gruxi/
+        cp README.md release/gruxi/
+        cp LICENSE release/gruxi/
 
     - name: Create Linux Archive
       if: matrix.os == 'ubuntu-latest'
       working-directory: release
-      run: tar -czf grux-${{ steps.version.outputs.version }}-linux-x64.tar.gz grux
+      run: tar -czf gruxi-${{ steps.version.outputs.version }}-linux-x64.tar.gz gruxi
 
     - name: Create Windows Archive
       if: matrix.os == 'windows-latest'
       working-directory: release
       shell: bash
-      run: 7z a -tzip grux-${{ steps.version.outputs.version }}-windows-x64.zip grux
+      run: 7z a -tzip gruxi-${{ steps.version.outputs.version }}-windows-x64.zip gruxi
 
     - name: Upload Release Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: grux-${{ matrix.os }}
-        path: release/grux-*.${{ matrix.archive_ext }}
+        name: gruxi-${{ matrix.os }}
+        path: release/gruxi-*.${{ matrix.archive_ext }}
         if-no-files-found: error
