--- a/development/php-fpm/docker-compose.yml
+++ b/development/php-fpm/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   # PHP-FPM service for handling PHP requests
-  grux-php-fpm:
+  gruxi-php-fpm:
     image: php:8.2-fpm-alpine
     volumes:
       - ../../www-testing:/var/www/html:ro  # Web content accessible to PHP-FPM
@@ -8,7 +8,7 @@ services:
       - "9000:9000"
     restart: unless-stopped
     extra_hosts:
-      - "gruxtest=127.0.0.1"
+      - "gruxitest=127.0.0.1"
     command:
     - /bin/sh
     - -c
