--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,10 @@ dashmap = "6.1.0"
 urlencoding = "2.1.3"
 unicode-normalization = "0.1.25"
 unicode-general-category = "1.1.0"
+email_address = "0.2.9"
+psl = "2.1.180"
+instant-acme = "0.8.4"
+x509-parser = "0.18.0"
 
 [lib]
 name = "gruxi"
@@ -45,8 +49,5 @@ path = "src/lib.rs"
 criterion = { version = "0.8", features = ["html_reports", "cargo_bench_support"] }
 
 [[bench]]
-name = "syslog_benchmark"
-harness = false
-[[bench]]
-name = "normalized_path"
+name = "gruxi"
 harness = false
